Switch to contributte
Switch to contributte

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-  "name": "czubehead/bootstrap-4-forms",
+  "name": "contributte/forms-bootstrap",
   "type": "library",
-  "description": "Nette extension for Bootstrap 4 forms",
-  "homepage": "https://github.com/czubehead/bootstrap-4-forms",
+  "description": "Nette extension for Bootstrap forms",
+  "homepage": "https://github.com/contributte/forms-bootstrap",
   "license": "MIT",
   "keywords": [
     "nette",
@@ -11,6 +11,10 @@
     "bootstrap"
   ],
   "authors": [
+    {
+      "name": "Dalibor Korpar",
+      "email": "dalibor.korpar@gmail.com"
+    },
     {
       "name": "Petr Čech",
       "email": "petr.cech.robot@gmail.com"
