raise phpstan to lvl 2

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -6,3 +6,5 @@ includes:
 
 parameters:
 	ignoreErrors:
+	    - '#Call to an undefined method Nette\\Forms\\IFormRenderer::configElem()#'
+	    - '#Call to an undefined method Nette\\Forms\\Controls\\ChoiceControl::flatAssocArray().#'
