--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
   },
   "require-dev": {
     "ninjify/qa": "^v0.10",
-    "phpunit/phpunit": "^8.5"
+    "phpunit/phpunit": "^7.5 | ^8.5"
   },
   "autoload": {
     "psr-4": {
