--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
   },
   "require-dev": {
     "ninjify/qa": "^v0.10",
-    "phpunit/phpunit": "^8.5"
+    "phpunit/phpunit": "^8.5",
+    "wavevision/nette-tests": "^3.1"
   },
   "autoload": {
     "psr-4": {
