--- a/composer.json
+++ b/composer.json
@@ -23,8 +23,7 @@
   },
   "require-dev": {
     "ninjify/qa": "^v0.10",
-    "phpunit/phpunit": "^8.5",
-    "wavevision/nette-tests": "^3.1"
+    "phpunit/phpunit": "^8.5"
   },
   "autoload": {
     "psr-4": {
