--- a/.travis.yml
+++ b/.travis.yml
@@ -3,23 +3,29 @@ php:
   - 7.2
   - 7.3
   - 7.4
+  - nightly
+before_install:
+  - phpenv config-rm xdebug.ini || return 0 # Turn off XDebug
 install:
   - travis_retry composer install --no-progress --prefer-dist
 script:
-  - vendor/bin/phpunit --configuration tests/phpunit.xml tests --coverage-clover=coverage.xml
-after_success:
-  - bash <(curl -s https://codecov.io/bash)
+  - make tests # Tests
+
+after_failure:
+  - for i in $(find tests -name \*.actual); do echo "--- $i"; cat $i; echo; echo; done # Print *.actual content
 jobs:
   include:
     - env: title="Lowest Dependencies 7.2"
       php: 7.2
       install:
         - travis_retry composer update --no-progress --prefer-dist --prefer-lowest
+      script:
+        - make tests
 
     - stage: Quality Assurance
       php: 7.2
       script:
-        - composer run-script qa
+        - make qa
 
     - stage: Phpstan
       php: 7.2
@@ -27,12 +33,23 @@ jobs:
         - composer run-script phpstan-install
         - composer run-script phpstan
 
+    - stage: Test Coverage
+      if: branch = master AND type = push
+      php: 7.2
+      script:
+        - make coverage
+      after_script:
+        - composer global require php-coveralls/php-coveralls ^2.1.0
+        - ~/.composer/vendor/bin/php-coveralls --verbose --config tests/.coveralls.yml
+
     - stage: Outdated Dependencies
       if: branch = master AND type = cron
       php: 7.2
       script:
-        - composer outdated --direct --strict
-
+        - composer outdated --direct
+  allow_failures:
+    - stage: Test Coverage
+    - php: nightly
 sudo: false
 
 cache:
