--- a/phpstan.neon
+++ b/phpstan.neon
@@ -1,3 +1,5 @@
+parameters:
+    treatPhpDocTypesAsCertain: false
 includes:
 	- vendor/phpstan/phpstan-deprecation-rules/rules.neon
 	- vendor/phpstan/phpstan-nette/extension.neon
