--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
   ],
   "require": {
     "php": ">=7.2",
-    "nette/forms": "^3.0.4",
+    "nette/forms": "3.0.7",
     "nette/application": "^3.0"
   },
   "require-dev": {
