--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -138,14 +138,14 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [ "7.2", "7.3", "7.4", "8.0", "8.1" ]
+        php-version: [ "7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
         operating-system: [ "ubuntu-latest" ]
         composer-args: [ "" ]
         include:
           - php-version: "7.2"
             operating-system: "ubuntu-latest"
             composer-args: "--prefer-lowest"
-          - php-version: "8.2"
+          - php-version: "8.3"
             operating-system: "ubuntu-latest"
             composer-args: "--ignore-platform-reqs"
       fail-fast: false
