--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,7 +23,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [ "7.4" ]
+        php-version: [ "8.1" ]
         operating-system: [ "ubuntu-latest" ]
       fail-fast: false
 
@@ -82,7 +82,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [ "7.4" ]
+        php-version: [ "8.1" ]
         operating-system: [ "ubuntu-latest" ]
       fail-fast: false
 
@@ -138,11 +138,11 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [ "7.2", "7.3", "7.4", "8.0", "8.1", "8.2"]
+        php-version: ["8.1", "8.2"]
         operating-system: [ "ubuntu-latest" ]
         composer-args: [ "" ]
         include:
-          - php-version: "7.2"
+          - php-version: "8.1"
             operating-system: "ubuntu-latest"
             composer-args: "--prefer-lowest"
           - php-version: "8.3"
@@ -205,7 +205,7 @@ jobs:
 
     strategy:
       matrix:
-        php-version: [ "7.4" ]
+        php-version: [ "8.1" ]
         operating-system: [ "ubuntu-latest" ]
       fail-fast: false
 
